--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,7 +1,3 @@
 @import 'variables';
 @import 'default';
-@import 'util/background';
-@import 'util/shadow';
-@import 'util/display';
-@import 'util/font';
-
+@import 'util';
