Importando util em um arquivo e novas variaveis

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -13,15 +13,17 @@ $colors: (
 
 // FONT SIZE
 $font-sum: 0.5em;
+$small: 0.8em;
 $h3: 1.5em;
 $h2: $h3 + $font-sum;
 $h1: $h2 + $font-sum;
 
 @debug $h1;
 $fonts-size: (
-  'h3': $h3,
-  'h2': $h2,
-  'h1': $h1
+  'small': $small,
+  'h3':     $h3,
+  'h2':     $h2,
+  'h1':     $h1
 );
 
 // DISPLAYS
@@ -32,3 +34,15 @@ $displays: (
   'flex',
   'inline-flex'
 );
+
+$text-aligns: (
+  'center',
+  'right',
+  'left'
+);
+
+$justify: (
+  'space-between',
+  'center',
+  'space-around'
+)
